--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,21 @@ body {
     text-decoration: none;
     font-style: normal;
 }
+
+.page-title {
+    font-size: 56px;
+    line-height: 1.07;
+    /*color: #fff;*/
+}
+
+#order-button {
+    width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    background-color: #4D5AE5;
+    color: #fff;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
