--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,7 @@ body {
     color: #F4F4FD;
 }
 
-.company-logo em {
-    font-style: normal;
+.company-logo span {
     color: #4D5AE5;
 }
 
@@ -53,6 +52,7 @@ button {
 #order-button {
     width: 169px;
     height: 56px;
+    padding: 16px 32px 16px 32px;
     border: none;
     border-radius: 4px;
     background-color: #4D5AE5;
