--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ button {
   cursor: pointer;
 }
 
-#btn-primary {
+.btn-primary {
   width: 169px;
   height: 56px;
   padding: 16px 32px 16px 32px;
@@ -61,8 +61,8 @@ button {
   line-height: 1.5;
 }
 
-#btn-primary:hover,
-#btn-primary:focus {
+.btn-primary:hover,
+.btn-primary:focus {
   background-color: #404bbf;
 }
 
