add default value of the background-color property to the body tag style rules in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Roboto", "Helvetica Neue", "Verdana", "Tahoma", sans-serif;
   color: #2e2f42;
+  background-color: #fff;
   line-height: 1.5;
 }
 
