--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,14 @@ body {
   color: #2e2f42;
   background-color: #fff;
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .company-logo {
   font-family: "Raleway";
   font-size: 18px;
   line-height: 1.167;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
@@ -55,6 +57,7 @@ button {
   background-color: #4d5ae5;
   color: #fff;
   font-size: 16px;
+  letter-spacing: 0.04em;
 }
 
 .btn-primary:hover,
