--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,18 @@ body {
   color: #f4f4fd;
 }
 
-.page-nav .link {
+.page-nav-list .link {
   font-size: 16px;
   font-weight: 500;
   color: #2e2f42;
 }
 
-.company-contacts .link {
-  font-size: 16px;
+address {
   font-style: normal;
+}
+
+.company-contacts-list .link {
+  font-size: 16px;
 }
 
 .page-title {
