--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .company-logo {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
@@ -40,6 +40,7 @@ address {
 
 .company-contacts-list .link {
   font-size: 16px;
+  color: #434455;
 }
 
 .page-title {
@@ -66,7 +67,7 @@ button {
 
 .link:hover,
 .link:focus {
-  color: #4d5ae5;
+  color: #404bbf;
 }
 
 .title {
