remove the div tag from the section tags

--- a/css/style.css
+++ b/css/style.css
@@ -98,10 +98,10 @@ a {
   text-decoration: none;
 }
 
-.dark-bg {
+.section-title {
   background-color: #2e2f42;
 }
 
-.light-bg {
+.section-our-team {
   background-color: #f4f4fd;
 }
