--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ address {
   font-size: 56px;
   line-height: 1.07;
   color: #fff;
+  text-align: center;
 }
 
 button {
@@ -58,6 +59,7 @@ button {
   color: #fff;
   font-size: 16px;
   letter-spacing: 0.04em;
+  font-weight: 500;
 }
 
 .btn-primary:hover,
