--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ button {
   color: #404bbf;
 }
 
-.title {
+.li-title {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -78,6 +78,7 @@ button {
 .section-text,
 .footer-text {
   font-size: 16px;
+  letter-spacing: 0.02em;
 }
 
 .footer-text {
@@ -90,6 +91,7 @@ button {
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
+  letter-spacing: 0.02em;
 }
 
 ul {
