--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ button {
   font-size: 16px;
   letter-spacing: 0.04em;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: inherit;
 }
 
 .hero__button:hover,
